# fastapi-ai-image-course

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-mongodb.sh  start-postgres.sh  start-redis.sh  start.sh  stop-containers.sh
app/: config.py  database.py  main.py
app/db/: mongo.py
app/models/: image.py  user.py
app/routes/: ai.py  basic.py  images.py  images_raw.py  mongo_demo.py  web.py
app/schemas/: image.py
app/services/: ai_service.py  cache_service.py  external_ai.py  image_gen_service.py  ocr_service.py  ollama_service.py  queue_service.py  rate_limit.py  tasks.py
app/static/: app.css
app/templates/: base.html  index.html  upload.html
app/utils/: image_utils.py
app/workers/: queue_worker.py
practices/: README.md  try_01_pydantic.py  try_02_pydantic.py  try_03_pydantic.py  try_04_tkinter_json.py  try_05_tkinter_form.py  try_06_tkinter_upload.py  try_07_tkinter_json_thread.py  try_08_tkinter_form_thread.py  try_09_tkinter_upload_thread.py  try_10_requests_get.py  try_11_requests_post.py  try_12_requests_exceptions.py  try_13_requests_query.py  try_14_requests_upload.py  try_15_requests_session.py  try_16_requests_retry.py  try_17_requests_auth.py  try_18_client_app.py  try_20_httpx_get.py  try_21_httpx_post.py  try_22_httpx_exceptions.py  try_23_httpx_query.py  try_24_httpx_upload.py  try_25_httpx_session.py  try_26_httpx_retry.py  try_27_httpx_auth.py
requests/: api.http
scripts/: client.py  requests_demo.py
tests/: test_smoke.py
