[project]
name = "fastapi-ai-image"
version = "0.1.0"
description = "FastAPI 與 AI 影像應用開發 範例專案"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.0",
    "pillow>=11.0.0",
    "redis>=5.2.0",
    "ollama>=0.4.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
# 單元 5.3：本地 Hugging Face 影像分類
ml = [
    "transformers>=4.45.0",
    "torch>=2.4.0",
]
# 單元 5.4：OCR 文字辨識
ocr = [
    "easyocr>=1.7.0",
    "numpy>=2.0.0",
]
# 單元 5.6：OpenAI DALL·E 影像生成（也可給 Ollama 的 OpenAI 相容介面使用）
openai = [
    "openai>=1.50.0",
]
# 單元 4.8：pgvector 向量搜尋
vector = [
    "pgvector>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
